- TLS v1.1 now not enabled by default. It is still possible to explicitly
  choose TLS v1.1, but this is not recommended and will be removed in a future
  version.
- Add `mosquitto_unsubscribe2_v5_callback_set`, which provides a callback that
  gives access to reason codes for each of the unsubscription requests.
- Add `mosquitto_property_remove`, for removing properties from property
  lists.

Clients:
- Add `-W` timeout support to Windows.
- The `--insecure` option now disables all server certificate verification.
- Fix incorrect output formatting in mosquitto_sub when using field widths
  with `%x` and `%X` for printing the payload in hex.
- Add float printing option to mosquitto_sub.
- Fix `-f` and `-s` options in mosquitto_rr.
- Add websockets support.
- Using `-x` now sets the clients to use MQTT v5.0.
- Fix parsing of IPv6 addresses in socks proxy urls.
- Add `--tls-keylog` option which can be used to generate a file that can be
  used by wireshark to decrypt TLS traffic for debugging purposes.
- mosquitto_sub payload hex output can now be split by fixed field length.

DB Dump:
- Add `--json` output mode.

Apps:
- Add `mosquitto_signal` for helping send signals to mosquitto on Windows.

Build:
- Increased CMake minimal required version to 3.14, which is required for the
  preinstalled SQLite3 find module.
- Add an CMake option `WITH_LTO` to enable/disable link time optimization.
- Set C99 as the explicit, rather than implicit, build standard.
- cJSON is now a required dependency.
- Refactored headers for easier discovery.
- Support for openssl < 3.0 removed.


2.0.20 - 2024-10-16
===================

Broker:
- Fix QoS 1 / QoS 2 publish incorrectly returning "no subscribers".
  Closes #3128.
- Open files with appropriate access on Windows. Closes #3119.
- Don't allow invalid response topic values.
- Fix some strict protocol compliance issues. Closes #3052.

Client library:
- Fix cmake build on OS X. Closes #3125.

Build:
- Fix build on NetBSD

