@@ -144,6 +144,8 @@ MOSQ_1.7 {
 
 MOSQ_2.1 {
 	global:
+		mosquitto_ext_auth_callback_set;
+		mosquitto_ext_auth_continue;
 		mosquitto_pre_connect_callback_set;
 		mosquitto_topic_matches_sub_with_pattern;
 		mosquitto_sub_matches_acl;
